# rit

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md  conanfile.py
imgs/apps/: CMakeLists.txt
imgs/apps/awb_grayworld/: CMakeLists.txt  awb_grayworld.cpp
imgs/apps/bilateral_filter/: CMakeLists.txt  bilateral_filter.cpp
imgs/apps/classification/: CMakeLists.txt
imgs/apps/classification/classify_mnist_with_knn/: CMakeLists.txt  classify_mnist_with_knn.cpp
imgs/apps/classification/classify_ritcis_with_knn/: CMakeLists.txt  classify_ritcis_with_knn.cpp
imgs/apps/demosaic_bilinear/: CMakeLists.txt  demosaic_bilinear.cpp
imgs/apps/demosaic_laroche_and_prescott/: CMakeLists.txt  demosaic_laroche_and_prescott.cpp
imgs/apps/display/: CMakeLists.txt  display.cpp
imgs/apps/examples/: CMakeLists.txt
imgs/apps/examples/craps/: CMakeLists.txt  craps.cpp
imgs/apps/examples/diana/: CMakeLists.txt  diana.cpp
imgs/apps/examples/eigenanalysis/: CMakeLists.txt  eigenanalysis.cpp
imgs/apps/examples/fourier/: CMakeLists.txt  test_dft.cpp
imgs/apps/examples/image_comparison/: CMakeLists.txt  image_comparison.cpp
imgs/apps/examples/list_files/: CMakeLists.txt  list_files.cpp
imgs/apps/examples/plot2d/: CMakeLists.txt  plot2d.cpp
imgs/apps/examples/plot3d/: CMakeLists.txt  plot3d.cpp
imgs/apps/examples/plot_matplot/: CMakeLists.txt  plot_matplot.cpp
imgs/apps/examples/program_options/: CMakeLists.txt  program_options.cpp
imgs/apps/examples/read_and_display_mnist/: CMakeLists.txt  read_and_display_mnist.cpp
imgs/apps/examples/read_and_display_ritcis/: CMakeLists.txt  read_and_display_ritcis.cpp
imgs/apps/examples/shapes/: CMakeLists.txt  Circle.h  Rectangle.h  Triangle.cpp  Triangle.h  shapes.h  test_circle.cpp  test_rectangle.cpp  test_triangle.cpp
imgs/apps/examples/shapes/html/: Rectangle_8h_source.html  Triangle_8cpp.html  Triangle_8h.html  Triangle_8h_source.html  annotated.html  classes.html  classshapes_1_1Rectangle.html  (+10 more)
imgs/apps/examples/shift_vector/: CMakeLists.txt  shift_vector.cpp
imgs/apps/examples/write_video/: CMakeLists.txt  write_video.cpp
imgs/apps/fast_corners/: CMakeLists.txt  fast_corners.cpp
imgs/apps/gamma_correct/: CMakeLists.txt  gamma_correct.cpp
imgs/apps/harris_corners/: CMakeLists.txt  harris_corners.cpp
imgs/apps/histogram_enhance/: CMakeLists.txt  histogram_enhance.cpp
imgs/apps/interpolate/: CMakeLists.txt  interpolate.cpp
imgs/apps/key_encrypt/: CMakeLists.txt  key_encrypt.cpp
imgs/apps/plot_histogram/: CMakeLists.txt  plot_histogram.cpp
imgs/apps/quantize/: CMakeLists.txt  quantize.cpp
imgs/apps/range/: CMakeLists.txt  test_range.cpp
imgs/apps/spatial_filter/: CMakeLists.txt  spatial_filter.cpp
imgs/apps/threshold/: CMakeLists.txt  threshold.cpp
imgs/apps/transform_gcp/: CMakeLists.txt  transform_gcp.cpp
imgs/apps/transform_q2q/: CMakeLists.txt  transform_q2q.cpp
imgs/apps/transform_rst/: CMakeLists.txt  transform_rst.cpp
imgs/ipcv/: CMakeLists.txt  ipcv.h
imgs/ipcv/bilateral_filtering/: BilateralFilter.cpp  BilateralFilter.h  CMakeLists.txt
imgs/ipcv/corners/: CMakeLists.txt  Corners.h  Fast.cpp  Fast.h  Harris.cpp  Harris.h
imgs/ipcv/demosaicing/: Bilinear.cpp  Bilinear.h  CMakeLists.txt  Demosaic.h  LarochePrescott.cpp  LarochePrescott.h
imgs/ipcv/geometric_transformation/: CMakeLists.txt  GeometricTransformation.h  MapGCP.cpp  MapGCP.h  MapQ2Q.cpp  MapQ2Q.h  MapRST.cpp  MapRST.h  Remap.cpp  Remap.h
imgs/ipcv/histogram_enhancement/: CMakeLists.txt  HistogramEnhancement.h  LinearLut.cpp  LinearLut.h  MatchingLut.cpp  MatchingLut.h
imgs/ipcv/key_encryption/: CMakeLists.txt  KeyEncryption.cpp  KeyEncryption.h
imgs/ipcv/mnist/: CMakeLists.txt  Mnist.h  ReadMnistImages.cpp  ReadMnistImages.h  ReadMnistLabels.cpp  ReadMnistLabels.h
imgs/ipcv/otsus_threshold/: CMakeLists.txt  OtsusThreshold.cpp  OtsusThreshold.h
imgs/ipcv/quantize/: CMakeLists.txt  Quantize.cpp  Quantize.h
imgs/ipcv/spatial_filtering/: CMakeLists.txt  Filter2D.cpp  Filter2D.h
imgs/ipcv/utils/: ApplyLut.cpp  ApplyLut.h  CMakeLists.txt  DeltaE.cpp  DeltaE.h  Dft.cpp  Dft.h  Dft2.cpp  Dft2.h  DftMagnitude.cpp  DftMagnitude.h  DftMultiply.cpp  DftMultiply.h  DftShift.cpp  DftShift.h  Dist.cpp  Dist.h  GammaCorrection.cpp  GammaCorrection.h  GrayworldAwb.cpp  GrayworldAwb.h  Histogram.cpp  Histogram.h  HistogramToCdf.cpp  HistogramToCdf.h  HistogramToPdf.cpp  HistogramToPdf.h  Psnr.cpp  Psnr.h  Rmse.cpp  Rmse.h  Utils.h
(+109 files in other folders)
