add_subdirectory(awb_grayworld)
add_subdirectory(bilateral_filter)
add_subdirectory(classification)
add_subdirectory(demosaic_bilinear)
add_subdirectory(demosaic_laroche_and_prescott)
add_subdirectory(display)
add_subdirectory(examples)
add_subdirectory(fast_corners)
add_subdirectory(gamma_correct)
add_subdirectory(harris_corners)
add_subdirectory(histogram_enhance)
add_subdirectory(interpolate)
add_subdirectory(key_encrypt)
add_subdirectory(plot_histogram)
add_subdirectory(quantize)
add_subdirectory(range)
add_subdirectory(spatial_filter)
add_subdirectory(threshold)
add_subdirectory(transform_gcp)
add_subdirectory(transform_q2q)
add_subdirectory(transform_rst)
