add_subdirectory(bilateral_filtering)
add_subdirectory(corners)
add_subdirectory(demosaicing)
add_subdirectory(geometric_transformation)
add_subdirectory(histogram_enhancement)
add_subdirectory(key_encryption)
add_subdirectory(otsus_threshold)
add_subdirectory(quantize)
add_subdirectory(spatial_filtering)
add_subdirectory(utils)
