add_subdirectory(craps)
add_subdirectory(diana)
add_subdirectory(dist)
add_subdirectory(eigenanalysis)
add_subdirectory(fourier)
add_subdirectory(image_comparison)
add_subdirectory(list_files)
add_subdirectory(plot2d)
add_subdirectory(plot3d)
add_subdirectory(plot_matplot)
add_subdirectory(program_options)
add_subdirectory(read_and_display_mnist)
add_subdirectory(read_and_display_ritcis)
add_subdirectory(shapes)
add_subdirectory(shift_vector)
add_subdirectory(write_video)
